# agnes-aigc-gen

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install-remote.bat  install-remote.ps1  install-remote.sh  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: SETUP.md  agnes-2.0-flash.md  agnes-image-2.1-flash.md  agnes-video-v2.0.md  chat-context-compression.md
docs/models/: agnes-video-v2.0.md
scripts/: ci-local.sh  install-skill.ps1  install-skill.sh  smoke-test.sh  write-install-state.sh
skills/agnes-aigc-gen/: SETUP.md  SKILL.md
src/: logging.rs  main.rs
src/agent/: agnes_stream.rs  approval.rs  chat.rs  context.rs  mod.rs  pi.rs  runner.rs  session.rs  tools.rs
src/api/: image.rs  mod.rs  types.rs  video.rs
src/cli/: chat.rs  dashboard.rs  history.rs  image.rs  list_tui.rs  mod.rs  self_cmd.rs  task.rs  version.rs  video.rs
src/config/: defaults.rs  mod.rs
src/crypto/: mod.rs
src/db/: mod.rs
src/install/: binary.rs  mod.rs  platform.rs  prompt.rs  release.rs  skill.rs  state.rs
src/media/: input.rs  jpeg.rs  mod.rs  preprocess.rs
src/output/: mod.rs
src/ratio/: mod.rs
src/ui/: app.rs  chat.rs  mod.rs
src/ui/dashboard/: assets.rs  config.rs  home.rs  jobs.rs  mod.rs  result.rs  task_display.rs  tasks.rs
src/ui/dashboard/generate/: fields.rs  image.rs  layout.rs  mod.rs  preview.rs  video.rs
