[package]
name = "agnes-aigc-gen"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "agnes-aigc-gen"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ratatui = "0.29"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
url = "2"

[features]
default = []
agent = []
