[package]
name = "agnes-aigc-gen"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "agnes-aigc-gen"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29", features = ["osc52"] }
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
ratatui = "0.30.1"
ratatui-core = "0.1.1"
tui-markdown = "0.3.7"
rand = "0.10.1"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
log = "0.4.32"
env_logger = "0.11.10"
async-stream = "0.3.6"
async-trait = "0.1.89"
eventsource-stream = "0.2.3"
futures = "0.3.32"
pi-agent = "1.0.0"
pi-ai = "1.0.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "1.1.2"
url = "2.5.8"

[features]
default = []
agent = []
